@@ -5,6 +5,12 @@
 import sys
 import os
 
+# handle unittest discovery feature
+try:
+    import unittest2 as unittest
+except ImportError:
+    import unittest
+
 classifiers = """\
 Development Status :: 5 - Production/Stable
 Environment :: Console
@@ -59,7 +65,7 @@ else:
     requires = ['cryptography']
 
 try:
-    from setuptools import setup
+    from setuptools import setup, Command
 
     params = {
         'install_requires': requires,
@@ -72,7 +78,7 @@ except ImportError:
             howto_install_setuptools()
             sys.exit(1)
 
-    from distutils.core import setup
+    from distutils.core import setup, Command
 
     params = {}
     if py_version > (2, 4):
@@ -94,5 +100,27 @@ params.update({
     'license': 'BSD',
     'packages': ['pysnmpcrypto']
 })
+
+
+class pytest(Command):
+    user_options = []
+
+    def initialize_options(self):
+        pass
+
+    def finalize_options(self):
+        pass
+
+    def run(self):
+        suite = unittest.testloader().loadtestsfromnames(
+            ['tests.__main__.suite']
+        )
+
+        unittest.texttestrunner(verbosity=2).run(suite)
+
+params['cmdclass'] = {
+    'test': pytest,
+    'tests': pytest,
+}
 
 setup(**params)
